[package]
name = "rslice"
version = "0.1.0"
authors = ["Andrew Emerson <32277829+AndrewDEmerson@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stl_io = "0.6.0"
png = "0.17.2"
nalgebra = "0.29.0"
debug_print = "1.0.0"
